# VisionForge

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/src/app/: main.py
backend/src/app/api/: al.py  annotations.py  artifacts.py  assets.py  auth.py  datasets.py  evaluation.py  experiments.py  jobs.py  middleware.py  ops.py  projects.py  rbac.py  workspaces.py
backend/src/app/db/: deps.py  session.py
backend/src/app/jobs/: celery_app.py
backend/src/app/models/: __init__.py  admin.py  alitem.py  alrun.py  annotation.py  annotation_schema.py  artifact.py  asset.py  audit.py  dataset.py  dataset_version.py  experiment.py  job.py  membership.py  project.py  (+3 more)
backend/tests/: conftest.py
backend/tests/contract/: test_auth_contract.py  test_auth_login_post.py  test_auth_signup_post.py  test_dataset_uploads_post.py  test_datasets_post.py  test_export_onnx_post.py  test_ingest_upload_url_post.py  test_jobs_get.py  test_projects_get.py  test_projects_post.py  test_run_detail_get.py  test_runs_get.py  test_train_post.py
backend/tests/integration/: test_active_learning_flow.py  test_auth_api.py  test_ingest_flow.py  test_onnx_export.py  test_training_flow.py
backend/tests/perf/: test_api_perf.py  test_onnx_regression.py
backend/tests/unit/: test_annotation_service.py  test_jobs_service.py  test_models_tables.py  test_services_active_learning.py  test_services_auth.py  test_services_embeddings.py  test_services_training.py
(+136 files in other folders)
