[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "visionforge-backend"
version = "0.0.1"
dependencies = [
  "fastapi>=0.112",
  "uvicorn[standard]>=0.30",
  "pydantic[email]>=2.7",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg2-binary>=2.9",
  "celery>=5.3",
  "redis>=5.0",
  "minio>=7.2",
  "prometheus-client>=0.20",
  "structlog>=24.1",
  "httpx>=0.27",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "schemathesis>=3.27",
  "ultralytics>=8.3",
  "onnx>=1.16",
  "onnxruntime>=1.18",
  "open-clip-torch>=2.24",
  "torch>=2.3",
  "torchvision>=0.18",
  "pgvector>=0.2",
]

[tool.pytest.ini_options]
addopts = "-q --cov=app --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 120
exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"src/app/api/*.py" = ["B008"]
"src/app/db/migrations/**/*.py" = ["E501"]
"tests/**/*.py" = ["E501"]
